# road-semantic-segmentation

./: .gitignore  LICENSE  README.md  download_modal_outputs.py  pyproject.toml  tasks.md
.github/workflows/: ci.yml
docs/: artifacts.md
docs/superpowers/plans/: 2026-03-27-cli.md
docs/superpowers/specs/: 2026-03-27-cli-design.md
notebooks/: data_exploration.py
report/: .gitignore  compile.sh  presentation.aux  presentation.nav  presentation.out  presentation.tex  presentation.toc  report.aux  report.bbl  report.bib  report.blg  report.out  report.tex
report/src/: presentation.tex  report.bib  report.tex
scripts/: dataset_downloader.py  modal_unet_train.py  preview_four_in_a_row.py
src/: __main__.py  cli.py  modal_deeplabv3_train.py  modal_unet_train.py
src/baselines/: data_exploration.py  kmeans.py  rgb_thresholding.py
src/configs/: eval_samples.json
src/evaluation/: generate_example_predictions.py  predict_deeplabv3_local.py  predict_unet_local.py
src/losses/: __init__.py  segmentation.py
src/models/: __init__.py  blocks.py  deeplabv3.py  unet.py
src/training/: __init__.py  dataset.py  train_deeplabv3.py  train_unet.py  utils.py
src/transforms/: __init__.py  segmentation.py
src/utils/: __init__.py  metrics.py  preview_four_in_a_row.py  preview_geometric_augmentations.py  visualization.py
static/: iou_diagram.tex
tests/: __init__.py  conftest.py  test_cli.py  test_dataset.py  test_metrics.py  test_models.py
